@@ -1,3 +1,11 @@
+2014-06-27  Roland McGrath  <roland@hack.frob.com>
+
+	* sysdeps/unix/sysv/linux/mips/vfork.S: Incorporate
+	SAVE_PID and RESTORE_PID blocks from nptl/pt-vfork.S.
+	* sysdeps/unix/sysv/linux/mips/nptl/vfork.S: File removed.
+	* sysdeps/unix/sysv/linux/mips/nptl/pt-vfork.S: File removed.
+	* sysdeps/unix/sysv/linux/mips/pt-vfork.S: New file.
+
 2014-06-27  Arjun Shankar  <arjun.is@lostca.se>
 
 	[BZ #17092]
